Explicitly allow setting the SecurityManager in tests
java.lang.SecurityManager has been deprecated and marked for removal. While Java
17 JDKs displayed only a warning when setting the SecurityManager, Java 21 JDKs
will throw an UnsupportedOperationException. This can be prevented by setting
the system property java.security.manager.allow to true. Only when issue
https://bugs.openjdk.org/browse/JDK-8199704 has been addressed, we have the
possibility to address this and remove the use of the SecurityManager.