@@ -169,7 +169,7 @@
                </systemPropertyVariables>
                <forkCount>1</forkCount>
                <reuseForks>false</reuseForks>
-               <argLine>-Xmx6g</argLine>
+               <argLine>-Xmx6g -Djava.security.manager=allow</argLine>
                <skip>${skip.maven.surefire}</skip>
                <reportsDirectory>${project.build.directory}/${testreports.surefire}</reportsDirectory>
                <!-- Do NOT wildcard include *Test.java, because then we would also run the SammCliIntegrationTest -->
